# embeddenator-contract-bench

./: .copilot  .gitignore  .gitleaks.toml  Cargo.toml  MIGRATION_REPORT.md  README.md  README_OLD.md
.github/workflows/: ci.yml
benches/: fs_operations.rs  hierarchical_scale.rs  io_operations.rs  query_hierarchical.rs  retrieval_index.rs  simd_cosine.rs  vsa_ops.rs
src/: dataset.rs  harness.rs  lib.rs  schema.rs
src/benches/: encode.rs  mod.rs  retrieval.rs  vsa.rs
