[package]
name = "embeddenator-contract-bench"
version = "0.2.1"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Deterministic contract benchmarks for embeddenator VSA operations"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-contract-bench"
keywords = ["vsa", "benchmarking", "embeddenator"]
categories = ["development-tools::profiling"]
publish = false

[dependencies]
embeddenator = { path = "../embeddenator" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
walkdir = "2.5"
tempfile = "3.13"
sha2 = "0.10"
bincode = "1.3"

[features]
default = []
# Pass-through to enable compression codecs used by encode benches.
compression = ["embeddenator/compression"]

[[bin]]
name = "embeddenator-contract-bench"
path = "src/bin/embeddenator_contract_bench.rs"
