[package]
name = "embeddenator-contract-bench"
version = "0.20.0-alpha.2"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Deterministic contract benchmarks for embeddenator VSA operations"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-contract-bench"
keywords = ["vsa", "benchmarking", "embeddenator"]
categories = ["development-tools::profiling"]

[dependencies]
embeddenator = { path = "../embeddenator", version = ">=0.20.0-alpha.1, <1.0.0" }
embeddenator-io = { path = "../embeddenator-io", version = ">=0.20.0, <1.0.0", optional = true }
clap = { version = ">=4.5, <5.0", features = ["derive"] }
serde = { version = ">=1.0, <2.0", features = ["derive"] }
serde_json = ">=1.0, <2.0"
rand = ">=0.8, <1.0"
rand_chacha = ">=0.3, <1.0"
rayon = ">=1.10, <2.0"
walkdir = ">=2.5, <3.0"
tempfile = ">=3.13, <4.0"
sha2 = ">=0.10, <1.0"
bincode = ">=1.3, <2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
# Pass-through to enable compression codecs used by encode benches.
compression = ["embeddenator-io"]

[[bin]]
name = "embeddenator-contract-bench"
path = "src/bin/embeddenator_contract_bench.rs"

# Criterion benchmark suites
[[bench]]
name = "vsa_ops"
harness = false

[[bench]]
name = "retrieval_index"
harness = false

[[bench]]
name = "hierarchical_scale"
harness = false

[[bench]]
name = "query_hierarchical"
harness = false

[[bench]]
name = "simd_cosine"
harness = false

[[bench]]
name = "io_operations"
harness = false

[[bench]]
name = "fs_operations"
harness = false
